rust/macros/tests/invalid/target/debug/deps/missing_argument-5d2682482ed80813.d
/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/missing_argument-5d2682482ed80813.d: missing_argument.rs Cargo.toml

/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/libmissing_argument-5d2682482ed80813.rmeta: missing_argument.rs Cargo.toml

missing_argument.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
